// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Video - Snapshots > matches snapshot with MP4 video 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/movie.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with OGG video 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/clip.ogg"
/>
`;

exports[`Video - Snapshots > matches snapshot with WebM video 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/animation.webm"
/>
`;

exports[`Video - Snapshots > matches snapshot with autoPlay and muted 1`] = `
<video
  autoplay=""
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with controls disabled 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  data-testid="video"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with custom className 1`] = `
<video
  class="h-auto max-w-full bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring rounded-lg shadow-lg"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with data-testid prop 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="custom-test-id"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with id prop 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  id="hero-video"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with loop 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  loop=""
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with multiple custom attributes 1`] = `
<video
  autoplay=""
  class="h-auto max-w-full bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring rounded-xl border-2"
  controls=""
  data-testid="video"
  height="720"
  loop=""
  playsinline=""
  poster="/poster.jpg"
  preload="auto"
  src="/complex.mp4"
  width="1280"
/>
`;

exports[`Video - Snapshots > matches snapshot with playsInline 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  playsinline=""
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with poster 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  poster="/thumbnail.jpg"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with preload attribute 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="none"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with required props 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  preload="metadata"
  src="/video.mp4"
/>
`;

exports[`Video - Snapshots > matches snapshot with width and height 1`] = `
<video
  class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring"
  controls=""
  data-testid="video"
  height="600"
  preload="metadata"
  src="/video.mp4"
  width="800"
/>
`;
